[package]
name = "eqmapper"
version = "0.1.0"
authors = ["Martin Lindhe <martin@ubique.se>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[dependencies]
clap = "2.32.0"
piston_window = "0.85.0"
find_folder = "0.3.0"
piston-ai_behavior = "0.26.0"
piston2d-sprite = "0.47.0"
image = "0.20.1"
piston2d-drag_controller = "0.24.0"
gfx = "0.17.1"
gfx_device_gl = "0.15.3"
vecmath = "0.3.1"
camera_controllers = "0.26.0"
rand = "0.6.1"
shader_version = "0.3.0"
