[package]
name = "eqformat_map"
version = "0.1.0"
authors = ["Martin Lindhe <martin@ubique.se>"]
edition = "2018"
license = "MIT"
description = "Reader for Everquest map data files"
repository = "https://github.com/martinlindhe/eqformat_map"


[lib]
path = "src/lib.rs"

[workspace]
members = [
    "eqmapper",
]
